--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PêlêTech Nexus  - Solutions IA Innovantes</title>
+    <title>PêlêTech Nexus - Solutions IA Innovantes</title>
     <meta name="description"
         content="Découvrez notre plateforme IA qui révolutionne votre productivité. Essayez gratuitement pendant 30 jours.">
 
     <!-- Favicon -->
-    <link rel="icon" type="image/svg+xml"
-        href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🚀</text></svg>">
+    <link rel="shortcut icon" href="assets/images/logo-image.png">
+    <link rel="icon" href="assets/images/android-chrome-512x512.png" type="image/png">
+    <meta name="theme-color" content="#6366f1">
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -295,7 +296,8 @@
             <div class="cta-content">
                 <h2 class="cta-title">Prêt à transformer votre entreprise ?</h2>
                 <p class="cta-subtitle">
-                    Rejoignez 10,000+ entreprises qui utilisent déjà PêlêTech Nexus . Essai gratuit de 30 jours, sans carte
+                    Rejoignez 10,000+ entreprises qui utilisent déjà PêlêTech Nexus . Essai gratuit de 30 jours, sans
+                    carte
                     bancaire.
                 </p>
 
