--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="assets/images/logo-image.png">
-    <link rel="icon" href="assets/images/android-chrome-512x512.png" type="image/png">
+    <link rel="icon" href="assets/images/favicon-16x16png" type="image/png">
     <meta name="theme-color" content="#6366f1">
 
     <!-- Google Fonts -->
